# NutritionApp

./: CMakeLists.txt  Main.qml  main.cpp
components/: BottomNavigationBar.qml
views/: AccountCreationView.qml  CameraInputView.qml  GetStartedView.qml  HealthConditionForm.qml  NutritionAndMedicationClocksView.qml  NutritionReviewView.qml  SignInView.qml  WelcomeView.qml
